Added blog post

--- a/csirt.divd.nl/_cases/DIVD-2021-00037.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00037.md
@@ -3,7 +3,7 @@ layout: case
 title: Critical vulnerabilities in ITarian MSP platform and on-premise solution
 excerpt: "ITarian a online platform and on-premise solution for Managed Services Providers, contains 3 critical vulnerabilities"
 author: 
-- Vitor Pasman
+- Victor Pasman
 - Frank Breedijk
 lead: Victor Gevers
 researchers:
@@ -94,13 +94,13 @@ DIVD researchers have identified multiple vulnerabilities in ITarian products. T
 
 ITarian on-premise platform is vulnerable to:
 * {% cve CVE-2022-25151 %}, Session cookie not protected by HttpOnly flag (ITarian SaaS platform / on-premise)
-* {% cve CVE-2022-25152 %}, Creation of procedure and bypass approval (ITarian SaaS platform / on-premise)
+* {% cve CVE-2022-25152 %}, Creation of procedure and bypass approvals by any user with a valid session token (ITarian SaaS platform / on-premise)
 
 Endpoint Manager Communication Client is vulnerable to:
 * {% cve CVE-2022-25153 %}, Endpoint Manager agent local privilege escalation
 
 The Saas Platform has two additional vulnerabilities:
-* A XSS in the helpdesk function
+* A Cross Site Scripting (XSS) vulnerability in the helpdesk function
 * The ability to brute force the download URL of the agent packages for other tenants
 
 Despite several attempts, via various routes, we have not received any significant feedback from ITarian and we have therefore decided to publicly disclose limited details of our findings.
@@ -113,7 +113,7 @@ With this disclosure, we want to warn ITarian customers that they are using an i
 
 To our knowledge, there are currently no patches available for the vulnerabilities in both the ITarian SaaS Platform and the ITarian on-premise version nor for the vulnerabilities in the Manager Communication Client. 
 
-For users of ITarian on-premise version, we strongly advise to not expose these systems to the internet.
+For users of ITarian on-premise version, we strongly advise to not expose these systems to the internet and to monitor the system closely.
 
 
 For users of the ITarian SaaS platform, users cannot take any action to remediate the vulnerability on their own, and the only possible solution available is to stop using the platform.
@@ -126,6 +126,6 @@ Additionally, we ask all ITarian users to reach out to ITarian to demand that th
 
 Fixing these vulnerabilities is clearly the responsibility of ITarian. We have no reliable way to fingerprint on-premise installation and no way to identify the users of the SaaS platform.
 
-Limited disclosure of these vulnerabilities, 109 days after successfully informing the vendor, is our pan-ultimate attempt to get these issues fixed before they are exploited. A full disclosure, currently planned for 31 May 2022 (30 days after limited disclosure and 139 days after we made ITarian aware of these issues), will be the next step in this process.
+Limited disclosure of these vulnerabilities, 109 days after successfully informing the vendor, is our penultimate attempt to get these issues fixed before they are exploited. A full disclosure, currently planned for 31 May 2022 (30 days after limited disclosure and 139 days after we made ITarian aware of these issues), will be the next step in this process.
 
 {% include timeline.html %}
