[DIVD-2022-0007] Update to subdomain takeovers
- added numbers
- added new item(s) to the timeline

--- a/csirt.divd.nl/_cases/DIVD-2022-00007.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00007.md
@@ -93,7 +93,10 @@ timeline:
 - start: 2022-03-03
   end: 
   event: "First scan & notify of CNAMES of .APP domains"
-ips: 42445
+- start: 2022-04-04
+  end: 2022-05-01
+  event: "First scan & notify of CNAMES of .COM domains"
+ips: 66661
 
 ---
 ## Summary
@@ -102,7 +105,7 @@ Subdomain takeovers do not only allow the attacker to publish content on the tar
 
 Subdomain takeovers typically occur when a CNAME is still pointing to a service which is no longer active, or in some cases because a typo was made while creating the CNAME. Note however, that even when using A / AAAA records you could, in certain cases, still be vulnerable to subdomain takeovers.
 
-Since 2014 subdomain takeovers have been growing problem. Due to the increased adoption of cloud this is also not a problem that will go away easily. 
+Since 2014 subdomain takeovers have been growing problem. Due to the increased adoption of cloud this is also not a issue that will go away easily. 
 
 ## What you can do
 
@@ -112,7 +115,7 @@ Since 2014 subdomain takeovers have been growing problem. Due to the increased a
 
 ## What we are doing
 
-* We are scanning the internet for vulnerable subdomain, and will attempt to notify system owners via the listed abuse contacts, `info@` and `security@`.
+We are scanning the internet for vulnerable subdomain, and will attempt to notify system owners via the listed abuse contacts, `info@` and `security@`.
 
 ## Further details
 
@@ -144,7 +147,7 @@ Most other services don't provide additional security measure. If the service is
 
 ### Unregistered Domains
 
-A special case of subdomain takeovers does not work with cloudproviders, in this case a CNAME has been created to another domain name, which is not/no longer registered, by registering this domain one could perform a takeover.
+A special case of subdomain takeovers does not work with cloud providers, in this case a CNAME has been created to another domain name, which is not/no longer registered, by registering this domain one could perform a takeover.
 
 {% include timeline.html %}
 
