[DIVD-2022-0007] Update to subdomain takeovers
- added numbers
- added new item(s) to the timeline

--- a/csirt.divd.nl/_cases/DIVD-2022-00007.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00007.md
@@ -1,9 +1,9 @@
 ---
 layout: case
 title: "Subdomain Takeovers"
-excerpt: "Subdomain Takovers via CNAMES or A records pointing to Azure, AWS, GitHub or unregistered domains"
+excerpt: "Subdomain Takeovers via CNAMES or A records pointing to Azure, AWS, GitHub or unregistered domains"
 author: Martin van Wingerden
-lead: Lennaert Oudshoorn
+lead: Martin van Wingerden
 status : Open
 researchers:
 - Martin van Wingerden
@@ -91,12 +91,15 @@ timeline:
   end: 2022-04-01
   event: "First scan & notify of CNAMES of .NET domains"
 - start: 2022-03-03
-  end: 
+  end: 2022-05-01
   event: "First scan & notify of CNAMES of .APP domains"
 - start: 2022-04-04
   end: 2022-05-01
   event: "First scan & notify of CNAMES of .COM domains"
-ips: 66661
+- start: 2022-05-01
+  end: 2022-05-01
+  event: "First scan & notify of CNAMES of .ONLINE domains"
+ips: 68966
 
 ---
 ## Summary
