--- a/csirt.divd.nl/_cases/DIVD-2022-00026.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00026.md
@@ -6,14 +6,18 @@ excerpt: "WSO2 servers are vulnerable to remote code execution due to a vulnearb
 author: Pepijn van der Stap
 lead: Victor Pasman
 redirect_from:
-- /DIVD-2022-00024/
+- /DIVD-2022-00026/
 status : Open
 researchers:
 - Pepijn van der Stap
 - Sjors Roelfzema
 cves: 
 - CVE-2022-29464
-product: Several WSO2 products
+product: WSO2 API Manager 2.2.0 and above through 4.0.0; 
+- WSO2 Identity Server 5.2.0 and above through 5.11.0; 
+- WSO2 Identity Server Analytics 5.4.0, 5.4.1, 5.5.0, and 5.6.0;
+- WSO2 Identity Server as Key Manager 5.3.0 and above through 5.10.0; 
+- WSO2 Enterprise Integrator 6.2.0 and above through 6.6.0.
 versions: multiple, see products heading
 recommendation: "If you receive an email from DIVD referring to this case, the vulnerability has been confirmed. You should update the application accordingly."
 patch_status: Available
@@ -27,8 +31,8 @@ timeline:
 - start: 2022-04-24
   end:	
   event: First version of this case file.
-
 ---
+
 ## Summary
 
 Due to improper validation of user input, a malicious actor could upload an arbitrary file to a user controlled location of the server. By leveraging the arbitrary file upload vulnerability, it is further possible to gain remote code execution on the server.
