--- a/csirt.divd.nl/_cases/DIVD-2022-00026.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00026.md
@@ -1,9 +1,10 @@
 ---
 layout: case
-title: DIVD-2022-00026 - WSO2 Remote Code Executions - CVE-2022-29464
-divd: DIVD-2022-00026
-excerpt: "WSO2 servers are vulnerable to remote code execution due to a vulnearbility that allows attackers to perform unauthenticated unrestricted arbitrary file uploads. DIVD is actively notifying owners of vulnerable systems"
+title: "DIVD-2022-00026 - WSO2 Remote Code Executions - CVE-2022-29464"
+short: "WSO2 servers are vulnerable to remote code execution due to a vulnearbility"
+excerpt: WSO2 servers are vulnerable to remote code execution due to a vulnearbility that allows attackers to perform unauthenticated unrestricted arbitrary file uploads. DIVD is actively notifying owners of vulnerable systems
 author: Pepijn van der Stap
+status: Open
 lead: Victor Pasman
 redirect_from:
 - /DIVD-2022-00026/
