--- a/csirt.divd.nl/_cases/DIVD-2022-00026.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00026.md
@@ -1,22 +1,25 @@
 ---
-layout : case
-title : "DIVD-2022-00026 - WSO2 Remote Code Executions - CVE-2022-29464"
-excerpt: WSO2 servers are vulnerable to remote code execution due to a vulnearbility that allows attackers to perform unauthenticated unrestricted arbitrary file uploads. DIVD is actively notifying owners of vulnerable systems
+layout: case
+title: DIVD-2022-00026 - WSO2 Remote Code Executions - CVE-2022-29464
+divd: DIVD-2022-00026
+excerpt: "WSO2 servers are vulnerable to remote code execution due to a vulnerability that allows attackers to perform unauthenticated unrestricted arbitrary file uploads. DIVD is actively notifying owners of vulnerable systems"
 author: Pepijn van der Stap
 lead: Victor Pasman
+redirect_from:
+- /DIVD-2022-00024/
 status : Open
 researchers:
-- Pepijn van der Stap
 - Sjors Roelfzema
-cves: CVE-2022-29464
+- Pepijn van der Stap
+cves: 
+- CVE-2022-29464
 product: WSO2 API Manager 2.2.0 and above through 4.0.0; 
 - WSO2 Identity Server 5.2.0 and above through 5.11.0; 
 - WSO2 Identity Server Analytics 5.4.0, 5.4.1, 5.5.0, and 5.6.0;
 - WSO2 Identity Server as Key Manager 5.3.0 and above through 5.10.0; 
 - WSO2 Enterprise Integrator 6.2.0 and above through 6.6.0.
 versions: multiple, see products heading!
-recommendation: "If you received a notification of a vulnerability, patch your system with the information provided in this notification."
-patch_status: Available
+recommendation: "If you received a notification of a vulnerability, patch your system with the information provided in this notification."patch_status: Available
 -workaround: 
 start: 2022-04-24
 end:
@@ -29,6 +32,7 @@ timeline:
   event: First version of this case file.
 
 ---
+
 ## Summary
 
 Due to improper validation of user input, a malicious actor could upload an arbitrary file to a user controlled location of the server. By leveraging the arbitrary file upload vulnerability, it is further possible to gain remote code execution on the server.
@@ -88,6 +92,6 @@ By leveraging the vulnerability, a malicious actor may perform Remote Code Execu
 {% include timeline.html %}
 
 ## More information
+
 * [Patch](https://docs.wso2.com/display/Security/Security+Advisory+WSO2-2021-1738#SecurityAdvisoryWSO2-2021-1738-UpdateVersions)
 * [Security Advisory](https://docs.wso2.com/display/Security/Security+Advisory+WSO2-2021-1738)
-
