--- a/csirt.divd.nl/_cases/DIVD-2022-00026.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00026.md
@@ -7,7 +7,7 @@ author: Pepijn van der Stap
 lead: Victor Pasman
 redirect_from:
 - /DIVD-2022-00026/
-status : Open
+status: Open
 researchers:
 - Sjors Roelfzema
 - Pepijn van der Stap
@@ -19,7 +19,8 @@ product: WSO2 API Manager 2.2.0 and above through 4.0.0;
 - WSO2 Identity Server as Key Manager 5.3.0 and above through 5.10.0; 
 - WSO2 Enterprise Integrator 6.2.0 and above through 6.6.0.
 versions: multiple, see products heading!
-recommendation: "If you received a notification of a vulnerability, patch your system with the information provided in this notification."patch_status: Available
+recommendation: "If you received a notification of a vulnerability, patch your system with the information provided in this notification."
+patch_status: Available
 -workaround: 
 start: 2022-04-24
 end:
