--- a/csirt.divd.nl/_cases/DIVD-2022-00026.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00026.md
@@ -1,18 +1,15 @@
 ---
 layout: case
-title: DIVD-2022-00026 - WSO2 Remote Code Executions - CVE-2022-29464
+title: "DIVD-2022-00026 - WSO2 Remote Code Executions - CVE-2022-29464"
 divd: DIVD-2022-00026
 excerpt: "WSO2 servers are vulnerable to remote code execution due to a vulnerability that allows attackers to perform unauthenticated unrestricted arbitrary file uploads. DIVD is actively notifying owners of vulnerable systems"
 author: Pepijn van der Stap
 lead: Victor Pasman
-redirect_from:
-- /DIVD-2022-00026/
 status: Open
 researchers:
 - Sjors Roelfzema
 - Pepijn van der Stap
-cves: 
-- CVE-2022-29464
+cves: CVE-2022-29464
 product: WSO2 API Manager 2.2.0 and above through 4.0.0; 
 - WSO2 Identity Server 5.2.0 and above through 5.11.0; 
 - WSO2 Identity Server Analytics 5.4.0, 5.4.1, 5.5.0, and 5.6.0;
@@ -21,7 +18,7 @@ product: WSO2 API Manager 2.2.0 and above through 4.0.0;
 versions: multiple, see products heading!
 recommendation: "If you received a notification of a vulnerability, patch your system with the information provided in this notification."
 patch_status: Available
--workaround: 
+-workaround:
 start: 2022-04-24
 end:
 timeline:
