--- a/csirt.divd.nl/_cases/DIVD-2022-00027.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00027.md
@@ -37,7 +37,7 @@ In addition, abuse of this vulnerability has been reported. Organisations are ur
 
 ## Impact
 
-By leveraging the ulnerability, an unauthenticated attacker with network access to the BIG-IP system through the management port and/or self IP addresses to execute arbitrary system commands, create or delete files, or disable services. 
+By leveraging the vulnerability, an unauthenticated attacker with network access to the BIG-IP system through the management port and/or self IP addresses to execute arbitrary system commands, create or delete files, or disable services. 
 
 ## What you can do
 
@@ -56,7 +56,7 @@ or
 ## What we are doing
 
 * DIVD is currently ensuring that the owners of vulnerable systems are being notified. We do this by scanning for vulnerable hosts, verifying the vulnerability and notifying the owners of these systems. If you receive an email from us regarding this case, the vulnerability has been confirmed.
-* We validate the vulnerability by executing a non-existant command and match the response.
+* We validate the vulnerability by executing a non-existent command and match the response.
 
 {% include timeline.html %}
 
