--- a/csirt.divd.nl/_cases/DIVD-2022-00027.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00027.md
@@ -1,6 +1,6 @@
 ---
 layout: case
-title: "DIVD-2022-00027 - F5 BIG-IP iControl REST API remote code execution - CVE-2022-1388"
+title: "DIVD-2022-00027 - F5 BIG-IP iControl REST API remote code execution"
 divd: DIVD-2022-00027
 excerpt: "F5 BIG-IP is vulnerable to remote code execution due to a vulnerability that allows attackers to execute commands by leveraging a authentication bypass in the REST API. DIVD is actively notifying owners of vulnerable systems"
 author: Pepijn van der Stap
