modify remediation text

--- a/csirt.divd.nl/_cases/DIVD-2022-00027.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00027.md
@@ -51,7 +51,7 @@ Fixes are available in versions 17.0.0, 16.1.2.2, 15.1.5.1, 14.1.4.6, and 13.1.5
 or
 - Take the instance offline
 
-* Inspect your instance for backdoors, miners if possible.
+* Inspect your instance for backdoors, miners if possible. We recommend you to eliminate any possibilities or malware remaining on the server.
 
 ## What we are doing
 
