--- a/csirt.divd.nl/_cases/DIVD-2022-00025.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00025.md
@@ -30,6 +30,12 @@ timeline:
 - start: 2022-04-13
   end:	
   event: First version of this case file.
+- start: 2022-04-13
+  end:
+  event: First batch of notifications sent 
+- start: 2022-05-15
+  end: 
+  event: Second batch of notifications sent
 
 ---
 ## Summary
