update timelines in two casefiles

--- a/csirt.divd.nl/_cases/DIVD-2022-00026.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00026.md
@@ -28,6 +28,9 @@ timeline:
 - start: 2022-04-24
   end:	
   event: First version of this case file.
+- start: 2022-05-15
+  end: 
+  event: Notified about 450 vulnerable hosts.
 
 ---
 
