--- a/csirt.divd.nl/_cases/DIVD-2022-00027.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00027.md
@@ -27,6 +27,12 @@ timeline:
 - start: 2022-05-10
   end:	
   event: First version of this case file.
+- start: 2022-05-11
+  end:
+  event: First round of notifications sent about 500 hosts
+- start: 2022-05-15
+  end:
+  event: Notified another 130 vulnerable hosts
 
 ---
 
