fix broken link error

--- a/csirt.divd.nl/_cases/DIVD-2022-00030.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00030.md
@@ -39,7 +39,7 @@ Organizations and users are urged to upgrade to the latest version of QTS and di
 ## Impact
 
 By leveraging the vulnerability, an unauthenticated attacker with network access to the QNAP NAS can encrypt all files on the system.
-For more information on this vulnerability see the article from [TheRecord](url).
+For more information on this vulnerability see the article from [TheRecord](https://therecord.media/qnap-urges-users-to-update-after-new-deadbolt-ransomware-attacks-discovered/).
 
 ## What you can do
 
