typo and languages corrections.

--- a/csirt.divd.nl/_cases/DIVD-2022-00030.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00030.md
@@ -26,13 +26,13 @@ timeline:
   event: First version of this case file.
 - start: 2022-05-24
   end:
-  event: First round of notifications sent about 10000 hosts
+  event: First round of notifications sent to about 10000 hosts
 ---
 
 
 ## Summary
 
-QNAP urges users to immediately patch NAS devices after several were were recently compromised and infected with malicious software.
+QNAP urges users to immediately patch NAS devices after several were recently compromised and infected with malicious software.
 While the exact vulnerability is unknown, it is known that the threat actors targeted version 4.3.3 to version 4.4.1.
 Organizations and users are urged to upgrade to the latest version of QTS and disconnect their NAS from the internet.
 
