fix text for qnap verification method

--- a/csirt.divd.nl/_cases/DIVD-2022-00030.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00030.md
@@ -55,7 +55,7 @@ For more information on this vulnerability see the article from [TheRecord](http
 ## What we are doing
 
 * DIVD is currently ensuring that the owners of vulnerable systems are being notified. We do this by scanning for vulnerable hosts, verifying the vulnerability and notifying the owners of these systems. If you receive an email from us regarding this case, the vulnerability has been confirmed.
-* We validate the vulnerability by executing a non-existent command and match the response.
+* We validate the vulnerability by checking whether the version is vulnerable from the patch and version number given in a http response. 
 
 {% include timeline.html %}
 
