--- a/csirt.divd.nl/_cases/DIVD-2022-00004.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00004.md
@@ -7,7 +7,7 @@ author: Max van der Horst
 lead: Max van der Horst
 redirect_from:
 - /DIVD-2022-00004/
-status : Open
+status : Closed
 researchers:
 - Wietse Boonstra
 - Ralph Horn
@@ -57,6 +57,12 @@ timeline:
 - start: 2022-02-18
   end:
   event:  DIVD starts monitoring for improvement of the situation.
+- start: 2022-04-18
+  end:
+  event:  DIVD initiates a second round of notifications to unpatched parties.
+- start: 2022-05-25
+  end:
+  event:  DIVD starts closing procedure including reporting.
 ips: 9645
 ---
 ## Summary
