--- a/csirt.divd.nl/_cases/DIVD-2022-00004.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00004.md
@@ -19,7 +19,7 @@ versions: any
 recommendation: "Check your system for active Monero mining software, check for unknown users and SSH keys, and when applicable ensure your database instances are properly secured."
 -workaround: n/a
 start: 2022-01-13
-end:
+end: 2022-05-25
 timeline:
 - start: 2021-12-13
   end:
