Grammer and spelling fixes

--- a/csirt.divd.nl/_cases/DIVD-2022-00033.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00033.md
@@ -1,8 +1,7 @@
 ---
 layout: case
 title: Atlassian Confluence 0-day unauthenticated RCE
-excerpt: "Please set this to and except of a few lines.
-Excerpts are shown on /cases"
+excerpt: "CVE-2022-26134 is a 0-day RCE in COnfluence. We are scanning the internet for exposed servers and warning owners. If you have COnflucne the advice is to take it offline"
 author: Frank Breedijk
 lead: Frank Breedijk
 researchers:
@@ -13,14 +12,14 @@ cves:
 product: 
 - Atlassian Confluence Server 
 - Atlassian Confluence Data Center
-- Other versions of Atlassian Confluence are not yet tested and potentially vulnerable too
+- Other versions of Atlassian Confluence are not yet tested and are potentially vulnerable too
 versions: 
 - ">= 7.4.0"
 - Older versions are potentially vulnerable too.
-recommendation: Currently no patches are available. It is recommened to restrict access to Confluence or to disable it. 
+recommendation: Currently no patches are available. It is recommended to restrict access to Confluence or to disable it. 
 patch_status: Unpatched (0-day)
-workaround: If access cannot be blocked or Confluence taken offline a WAF that blocks requests containing `${` may provide addtional protection
-status : Open
+workaround: If access cannot be blocked or Confluence taken offline a WAF that blocks requests containing `${` may provide additional protection
+status: Open
 start: 2022-06-03
 end: 
 timeline:
@@ -38,27 +37,27 @@ ips: 0
 ---
 ## Summary
 
-On 2 Jun 2022 Volexity published a (report about exploit of Confluence)[https://www.volexity.com/blog/2022/06/02/zero-day-exploitation-of-atlassian-confluence/]. Volexity has been in contact with Atlassian who released [a formal advisory](https://confluence.atlassian.com/doc/confluence-security-advisory-2022-06-02-1130377146.html).
+On 2 Jun 2022, Volexity published a (report about an exploitation of Confluence)[https://www.volexity.com/blog/2022/06/02/zero-day-exploitation-of-atlassian-confluence/]. Volexity has been in contact with Atlassian who released [a formal advisory](https://confluence.atlassian.com/doc/confluence-security-advisory-2022-06-02-1130377146.html).
 
 What we know so far:
 * Affected products are Confluence Server and Confluence Datacenter (both on-premise products)
 * The vulnerability was found in version 7.18.0
-* Versions >= 7.4.0 have confirmed to be vulnerable too
-* Other version may be vulnerable
-* The vulnerability is an unautheticated Remote Code Execution
+* Versions >= 7.4.0 have been confirmed to be vulnerable too
+* Other versions may be vulnerable
+* The vulnerability is an unauthenticated Remote Code Execution
 * There is no patch available
 
 ## What you can do
 
 If you are using Confluence Server or Data Center it is recommended that you either:
-* Severly restrict access, or
+* Severely restrict access, or
 * Disable the service
 
-If that is unfeasable, a WAF that blocks requests containing `${` may provide addtional protection, but there is still a severe risk.
+If that is unfeasible, a WAF that blocks requests containing `${` may provide additional protection, but there is still a severe risk.
 
 ## What we are doing
 
-We are currently working to identify Confluence instances that are accessible from the internet and warning owners.
+We are currently working to identify Confluence instances that are accessible from the internet and warn owners.
 
 We will be sharing the Dutch part of the data with the [Dutch Digital Trust Center](https://www.digitaltrustcenter.nl/dreigingsinformatie-ontvangen) who will inform affected Dutch companies
 
