--- a/csirt.divd.nl/_cases/DIVD-2022-00033.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00033.md
@@ -32,6 +32,13 @@ timeline:
 - start: 2022-06-03
   end:
   event: "First version of this case file"
+- start: 2022-06-03
+  end:
+  event: "Patches announced"
+- start: 2022-06-04
+  end:
+  event: "Patches expected"
+  
 ips: 0 
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
@@ -45,7 +52,7 @@ What we know so far:
 * Versions >= 7.4.0 have been confirmed to be vulnerable too
 * Other versions may be vulnerable
 * The vulnerability is an unauthenticated Remote Code Execution
-* There is no patch available
+* There is no patch available, patches are expected to arrive before 4 June 2022 07:00 UTC (End of day 3 Jun PST)
 
 ## What you can do
 
