--- a/csirt.divd.nl/_cases/DIVD-2022-00033.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00033.md
@@ -1,7 +1,7 @@
 ---
 layout: case
 title: Atlassian Confluence 0-day unauthenticated RCE
-excerpt: "CVE-2022-26134 is a 0-day RCE in COnfluence. We are scanning the internet for exposed servers and warning owners. If you have COnflucne the advice is to take it offline"
+excerpt: "CVE-2022-26134 is a 0-day RCE in Confluence. We are scanning the internet for exposed servers and warning owners. If you have COnflucne the advice is to take it offline"
 author: Frank Breedijk
 lead: Frank Breedijk
 researchers:
