--- a/csirt.divd.nl/_cases/DIVD-2022-00033.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00033.md
@@ -35,9 +35,9 @@ timeline:
 - start: 2022-06-03
   end:
   event: "Patches announced"
-- start: 2022-06-04
+- start: 2022-06-03
   end:
-  event: "Patches expected"
+  event: "Patches available"
 
 ips: 0
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
