--- a/csirt.divd.nl/_cases/DIVD-2022-00033.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00033.md
@@ -18,7 +18,7 @@ versions:
 - Older versions are potentially vulnerable too.
 recommendation: Patches are available. If you can not patch, we recommended to restrict access to Confluence or to take it offline.
 patch_status: Patch available
-workaround: If access cannot be blocked or Confluencec cannot be taken offline a WAF that blocks requests containing `${` may provide some protection
+workaround: If access cannot be blocked or Confluence cannot be taken offline a WAF that blocks requests containing `${` may provide some protection
 status: Open
 start: 2022-06-03
 end:
