--- a/csirt.divd.nl/_cases/DIVD-2022-00033.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00033.md
@@ -38,6 +38,12 @@ timeline:
 - start: 2022-06-03
   end:
   event: "Patches available"
+- start: 2022-06-03
+  end:
+  event: "Proof of Concept for exploitation is shared publicy online"
+- start: 2022-06-04
+  end:
+  event: "Notifications being sent to about 15k vulnerable instances"
 
 ips: 0
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
