--- a/csirt.divd.nl/_cases/DIVD-2022-00032.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00032.md
@@ -13,7 +13,7 @@ product:
 # versions:
 # - ">= 7.4.0"
 # - Older versions are potentially vulnerable too.
-recommendation: Verify is the backdoor is installed on your Exchange Server.
+recommendation: Verify if the backdoor is installed on your Exchange Server.
 # patch_status: Patch available
 # workaround:  
 status: Open
@@ -22,14 +22,14 @@ end:
 timeline:
 - start: 2022-06-02
   end:
-  event: "Eye Security publishes about a identified backdoor on a Exchange Server"
+  event: "Eye Security publishes their blog about a identified backdoor on a Exchange Server"
 - start: 2022-06-03
   end:
   event: "DIVD Starts scanning for infected hosts"
-- start: 2022-06-03
+- start: 2022-06-06
   end:
   event: "First version of this case file"
-- start: 2022-06-04
+- start: 2022-06-06
   end:
   event: "First round of notifications sent"
 
@@ -38,21 +38,22 @@ ips: 0
 ---
 ## Summary
 
-On 2 June 2022, Eye Security published a [report about a identified backdoor on earlier with ProxyLogon breached Server](https://www.eye.security/blog/winrs-and-exchange-a-sneaky-backdoor). 
+On 2 June 2022, Eye Security published a [blogpost](https://www.eye.security/blog/winrs-and-exchange-a-sneaky-backdoor) about a identified backdoor on earlier with ProxyLogon breached Server. 
 
 ## What you can do
 Install the Microsoft Exchange patches.
 Verify if the backdoor is available on your Microsoft Exchange server by using the following Powershell command:
 winrs -r:https://yourexchangeserverurl/wsman whoami
 
-If you receive the following error: "Winrs error: Access is denied." Then is your system probably equipped with a backdoor by an malicious actor.
+If you receive the following error: "Winrs error: Access is denied." Then is your system probably has a backdoor installed by an malicious actor.
 
 ## What we are doing
 
-We are currently working to identify the backdoor's on Exchange Servers that are accessible from the internet and warn owners.
+We are currently working to identify the backdoors on Exchange Servers that are accessible from the internet and warn owners.
 
 {% comment %}  Leave this here, so we see a timeline{% endcomment %}
 {% include timeline.html %}
+
 
 
 ## More information
