--- a/csirt.divd.nl/_cases/DIVD-2022-00032.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00032.md
@@ -38,7 +38,7 @@ ips: 0
 ---
 ## Summary
 
-On 2 June 2022, Eye Security published a [blogpost](https://www.eye.security/blog/winrs-and-exchange-a-sneaky-backdoor) about a identified backdoor on earlier with ProxyLogon breached Server. 
+On 2 June 2022, Eye Security published a [blogpost](https://www.eye.security/blog/winrs-and-exchange-a-sneaky-backdoor) about a identified backdoor on earlier with ProxyLogon breached Server. The backdoor was found by their SOC after an alert of blocked Powershell execution on a Exchange Server. The backdoor was probably installed during or after the initial compromise via proxylogon or proxy shell and makes use of the WinRS service on the server to give a malicous actor with credentials remote access to the server.
 
 ## What you can do
 Install the Microsoft Exchange patches.
