--- a/csirt.divd.nl/_cases/DIVD-2021-00037.md
+++ b/csirt.divd.nl/_cases/DIVD-2021-00037.md
@@ -1,7 +1,7 @@
 ---
 layout: case
 title: Critical vulnerabilities in ITarian MSP platform and on-premise solution
-excerpt: "ITarian a online platform and on-premise solution for Managed Services Providers, contains 3 critical vulnerabilities"
+excerpt: "ITarian an online platform and on-premise solution for Managed Services Providers, contains 3 critical vulnerabilities. Vulnerabilities have been patched in the SaaS version only!"
 author: 
 - Victor Pasman
 - Frank Breedijk
@@ -18,12 +18,12 @@ cves:
 - CVE-2022-25153
 product: 
 - ITarian All-in-one SaaS for MSPs
-- ITarian On Premise
+- ITarian On-Premise
 - ITarian Endpoint Manager Communication Client
 #versions: 
 #- All versions
 #- Again one per line
-recommendation: Given the nature of the vulnerabilities we discovered and the lack of response from the vendor we recommend all users to stop using this product
+recommendation: Update the ITarian Endpoint Manager Communication Client wherever possible. Stop using the On-Premise version.
 patch_status: Not patched
 #workaround: n/a
 status : Open
@@ -44,39 +44,57 @@ timeline:
   event: "Vulnerabilities reported to ITarian support via email"
 - start: 2022-01-11
   end:
-  event: "Contacted Dr. Erdal Ozkaya, the ITarian CISO via LinkedIn"
+  event: "We were able to reach a contact at a sister company of ITarian via LinkedIn"
 - start: 2022-01-12
   end:
-  event: "Details of the vulnerabilities reported to ITarian CISO via email"
+  event: "Reported the detailed findings to our contact via email. Contact reports that the details of the vulnerabilities have been forwarded to the ITarian CEO and that information was received."
 - start: 2022-01-12
   end:   2022-01-19  
   event: "Time to acknowledge receipt"
 - start: 2022-01-19
   end:
-  event: "CISO confirms receipt of the details and states that he 'will verify this with my engineering team and let you know'"
+  event: "Our contact confirms receipt of the details and states that he 'will verify this with my engineering team and let you know'"
 - start: 2022-02-14
   end:
   event: "Released a TLP-Amber warning to Trusted Information Sharing Partners"
 - start: 2022-01-12
-  end:   open
-  event: "Time to acknowledge vulnerability"
+  end:   2022-02-18
+  event: "Time to acknowledge CVE-2022-25153"
+  # Time to acknowledge is an important metric we like to track it
+- start: 2022-02-18
+  event: "Unknown to us, ITarian patches CVE-2022-25153 in version v7.0.42012.22030 of the End Point Manager Communications Client"
+- start: 2022-01-12
+  end:   2022-02-18
+  event: "Time to patch CVE-2022-25153"
+  # Time to patch is another important metric
+- start: 2022-04-28
+  event: "Informed our contact, the ITarian Chairman & Founder, CEO, CMO, and CISO via LinkedIn as well as support and Sales via email of pending publication on 1 Jun 2022"
+- start: 2022-04-29
+  event: "DIVD gets introduced to a Technical Executive at ITarian/Comodo, remediation process starts"
+- start: 2022-05-05
+  event: "DIVD and Technical Executive have an in-depth conversation. ITarian acknowledges CVE-2022-25151, CVE-2022-25152 as well as the XSS in the helpdesk function"
+- start: 2022-01-12
+  end:   2022-05-05
+  event: "Time to acknowledge CVE-2022-25151, CVE-2022-25152, and XSS"
+  # Time to acknowledge is an important metric we like to track it
+- start: 2022-05-19
+  event: "CVE-2022-25151, CVE-2022-25152 and XSS patched in SaaS version"
+- start: 2022-01-12
+  end:   2022-05-19
+  event: "Time to patch CVE-2022-25151, CVE-2022-25152, and XSS"
   # Time to acknowledge is an important metric we like to track it
 - start: 2022-01-12
-  end:   open
-  event: "Time to patch"
-  # Time to patch is another important metric
-- start: 2022-01-12
-  end:   2022-05-01
+  end:   2022-06-08
   event: "Time to (limited) public disclosure"
-- start: 2022-05-01
+- start: 2022-06-08
   end:   
   event: "DIVD publicly releases limited information about the vulnerabilities"
 - start: 2022-01-12
-  end:   2022-05-31
+  end:   2022-07-01
   event: "Time to full public disclosure"
-- start: 2022-05-31
+- start: 2022-07-01
   end:   
-  event: "Deadline for full disclosure"
+  event: "Planned full disclosure"
 ips: 0 
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 #
@@ -88,44 +106,44 @@ jekyll-secinfo:
 ## Summary
 
 DIVD researchers have identified multiple vulnerabilities in ITarian products. The vulnerabilities have been found in the following products:
-* ITarian SaaS platform
+* ITarian SaaS platform (version < 3.49.0)
 * ITarian on-premise (version 6.35.37347.20040)
-* Endpoint Manager Communication Client (version 6.43.41148.21120)
+* Endpoint Manager Communication Client (version < 7.0.42012.22030)
 
 ITarian on-premise platform is vulnerable to:
 * {% cve CVE-2022-25151 %}, Session cookie not protected by HttpOnly flag (ITarian SaaS platform / on-premise)
 * {% cve CVE-2022-25152 %}, Creation of procedure and bypass approvals by any user with a valid session token (ITarian SaaS platform / on-premise)
 
-Endpoint Manager Communication Client is vulnerable to:
+Endpoint Manager Communication Client was vulnerable to:
 * {% cve CVE-2022-25153 %}, Endpoint Manager agent local privilege escalation
 
-The Saas Platform has two additional vulnerabilities:
-* A Cross Site Scripting (XSS) vulnerability in the helpdesk function
-* The ability to brute force the download URL of the agent packages for other tenants
+The Saas Platform had an additional vulnerability:
+* A Cross-Site Scripting (XSS) vulnerability in the helpdesk function
 
-Despite several attempts, via various routes, we have not received any significant feedback from ITarian and we have therefore decided to publicly disclose limited details of our findings.
+On 18 Feb 2022, the vulnerability in the Endpoint Manager Communications Client was resolved. The other vulnerabilities were resolved on 19 May 2022.
 
-By chaining the XSS in the helpdesk product with CVE-2022-25152 an attacker would theoretically be able to create a service desk ticket that, when viewed by a user with a valid session token, will execute a workflow on all clients with superuser privileges.
+The coordinated vulnerability process worked but suffered from a communications breakdown, which caused a serious delay in the issues being resolved. However, once there was a direct communications line between DIVD researchers and ITarian's software engineering, the issues were resolved quickly.
 
-With this disclosure, we want to warn ITarian customers that they are using an insecure product that can be weaponized for malicious purposes, e.g. in a Kaseya VSA-like scenario to deliver malware into their infrastructure.
+
+The consequences of these vulnerabilities could have been severe. By chaining the XSS in the helpdesk function with {% cve CVE-2022-25152 %} an attacker would theoretically be able to create a service desk ticket that, when viewed by a user with a valid session token, would execute a workflow on all clients with superuser privileges. It is a small consolidation that the service desk module is not turned on by default.
+
+It is important to note that {% cve CVE-2022-25151 %} and {% cve CVE-2022-25152 %} are still present in the on-premise version of the ITarian platform. Even though ITarian still offers the software for download, this version of the software was discontinued over 2 years ago and ITarian has informed us that it will not be updated.
 
 ## What you can do
 
-To our knowledge, there are currently no patches available for the vulnerabilities in both the ITarian SaaS Platform and the ITarian on-premise version nor for the vulnerabilities in the Manager Communication Client. 
+All users of ITarian products should be aware of the privilege escalation on Endpoint Manager Communications Client on Windows. This agent is installed by default on all Windows systems managed via either the Saas or on-premise version of ITarian and allowed an attacker with low privilege system access to escalate privileges to SYSTEM. We advise users to update this agent to at least version v7.0.42012.22030
 
-For users of ITarian on-premise version, we strongly advise to not expose these systems to the internet and to monitor the system closely.
+The vulnerabilities we reported in the SaaS service, have all been resolved in version v3.49.0. This is an upgrade performed by ITarian, and no user action is required.
 
-
-For users of the ITarian SaaS platform, users cannot take any action to remediate the vulnerability on their own, and the only possible solution available is to stop using the platform.
-
-All users of ITarian products should be aware of the privilege escalation on Endpoint Manager Communications Client on Windows. This agent is installed by default on all Windows systems managed via either the Saas or on-premise version of ITarian and allows an attacker with low privilege system access to escalate privileges to SYSTEM. We advise users to deinstall this agent on systems that are also used interactively by low-privileged users.
-
-Additionally, we ask all ITarian users to reach out to ITarian to demand that these vulnerabilities are patched as soon as possible, as all our attempts to contact ITarian so far have yielded zero results.
+ITarian has informed us that support for their on-premise solution has seized over two years ago and that the vulnerabilities we found will therefore not be fixed in this version. Given the seriousness of the solution and the power of the platform, we would recommend those using the on-premise version to:
+a. Investigate alternative solutions. Either the ITarian SaaS service or another on-premise product as this product is no longer supported
+b. To fully disconnect the ITarian on-premise solution from the internet, and
+c. To not rely upon the permissions and approvals model built into ITarian. 
 
 ## What we are doing
 
-Fixing these vulnerabilities is clearly the responsibility of ITarian. We have no reliable way to fingerprint on-premise installation and no way to identify the users of the SaaS platform.
+We have worked with ITarian to the best of our abilities to get these vulnerabilities fixed in a timely manner.
 
-Limited disclosure of these vulnerabilities, 109 days after successfully informing the vendor, is our penultimate attempt to get these issues fixed before they are exploited. A full disclosure, currently planned for 31 May 2022 (30 days after limited disclosure and 139 days after we made ITarian aware of these issues), will be the next step in this process.
+At this moment in time, we have identified that there are a, very limited number of, ITarian on-premise installations still internet accessible. We will try to contact the owners of these installations to warn them.
 
 {% include timeline.html %}
