--- a/csirt.divd.nl/_cases/DIVD-2022-00033.md
+++ b/csirt.divd.nl/_cases/DIVD-2022-00033.md
@@ -49,11 +49,10 @@ timeline:
   event: "Data concerning the etherlands shared with the Digital Trust Center and the Dutch Security Clearing House (Security Meldpunt)" 
 - start: 2022-06-06
   end:
-  event: "1148 notifications sent out to vulnerable owners"
+  event: "Approximately 1150 notifications sent out to vulnerable owners"
 - start: 2022-06-07
   end: 
-  event: "Another 834 vulnerable instances identified and informed"
-
+  event: "Approximately 800+ vulnerable instances identified and informed"
 ips: 0
 # You can set IPs to n/a when this case isn't about IPs (e.g. stolen credentials)
 ---
